--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -260,6 +260,7 @@ collectK8sLogs: &collectK8sLogs
       set +e
       ./scripts/ci/collect-service-logs.sh stackrox
       ./scripts/ci/collect-service-logs.sh kube-system
+      ./scripts/ci/collect-service-logs.sh proxies
       ./scripts/ci/collect-infrastructure-logs.sh
     when: always
 
@@ -1549,7 +1550,7 @@ jobs:
       - SCANNER_SUPPORT: true
       - INFLUXDB_URL: "http://monitoring-1.us-central1-c.c.stackrox-ci.internal:8086"
       - LOAD_BALANCER: lb
-      - ROX_PLAINTEXT_ENDPOINTS: "http@8080,grpc@8081"
+      - ROX_PLAINTEXT_ENDPOINTS: "8080,grpc@8081"
       - ROX_CONFIG_MGMT_UI: true
       - ROX_BADGER_DB: true
       - ROX_SENSOR_AUTOUPGRADE: true
@@ -1611,8 +1612,13 @@ jobs:
       - run:
           name: Port-forward to NGINX proxies
           command: |
-            nohup kubectl -n proxies port-forward svc/nginx-proxy-plain-http 10080:80 </dev/null >/dev/null 2>&1 &
-            nohup kubectl -n proxies port-forward svc/nginx-proxy-tls-multiplexed 10443:443 </dev/null >/dev/null 2>&1 &
+            nohup kubectl -n proxies port-forward svc/nginx-proxy-plain-http 10080:80 </dev/null &>/dev/null &
+            nohup kubectl -n proxies port-forward svc/nginx-proxy-tls-multiplexed 10443:443 </dev/null &>/dev/null &
+            nohup kubectl -n proxies port-forward svc/nginx-proxy-tls-multiplexed-tls-be 11443:443 </dev/null &>/dev/null &
+            nohup kubectl -n proxies port-forward svc/nginx-proxy-tls-http1 12443:443 </dev/null &>/dev/null &
+            nohup kubectl -n proxies port-forward svc/nginx-proxy-tls-http1-plain 13443:443 </dev/null &>/dev/null &
+            nohup kubectl -n proxies port-forward svc/nginx-proxy-tls-http2 14443:443 </dev/null &>/dev/null &
+            nohup kubectl -n proxies port-forward svc/nginx-proxy-tls-http2-plain 15443:443 </dev/null &>/dev/null &
             sleep 1
 
       - run:
@@ -1635,9 +1641,27 @@ jobs:
             [[ "$version" == "$(make --quiet tag)" ]]
 
       - run:
-          name: Test roxctl access to multiplexed TLS proxy
+          name: Test roxctl access to proxies
           command: |
-            roxctl -e "localhost:10443" -p "$ROX_PASSWORD" central debug log
+            proxies=(
+              "Multiplexed TLS proxy with plain backends:10443"
+              "Multiplexed TLS proxy with TLS backends:11443"
+              "HTTP/1 proxy with TLS backends:12443"
+              "HTTP/1 proxy with plain backends:13443"
+              "HTTP/2 proxy with TLS backends:14443"
+              "HTTP/2 proxy with plain backends:15443"
+            )
+
+            for p in "${proxies[@]}"; do
+              name="$(echo "$p" | cut -d: -f1)"
+              port="$(echo "$p" | cut -d: -f2)"
+              mkdir -p "/tmp/proxy-test-${port}" && cd "/tmp/proxy-test-${port}"
+
+              echo "Testing roxctl access through ${name}..."
+              roxctl -e "localhost:${port}" -p "$ROX_PASSWORD" central debug log >/dev/null
+              roxctl -e "localhost:${port}" -p "$ROX_PASSWORD" sensor generate k8s --name remote --continue-if-exists
+              echo "OK"
+            done
 
       - *restoreUI
       - *determineWhetherToRunUIDevServer
