--- a/ui/package.json
+++ b/ui/package.json
@@ -90,8 +90,11 @@
         "test-watch": "react-scripts test",
         "lint": "tailwind build ./src/app.css -c ./tailwind.js -o ./src/index.css && NODE_PATH=src eslint src cypress",
         "cypress-open": "CYPRESS_ROX_AUTH_TOKEN=$(./scripts/get-auth-token.sh) cypress open",
+        "cypress-demo-open": "cypress open --config integrationFolder=cypress/demo",
         "test-e2e-local": "CYPRESS_ROX_AUTH_TOKEN=(./scripts/get-auth-token.sh) cypress run",
         "test-e2e-ci": "CYPRESS_ROX_AUTH_TOKEN=$(./scripts/get-auth-token.sh) cypress run --reporter mocha-multi-reporters --reporter-options configFile=cypress/mocha.config.json",
+        "test-e2e-demo-local": "cypress run --config integrationFolder=cypress/demo",
+        "test-e2e-demo-ci": "cypress run --config integrationFolder=cypress/demo --reporter mocha-multi-reporters --reporter-options configFile=cypress/mocha.config.json",
         "connect": "../scripts/connect-ui.sh ${1}",
         "deploy": "../deploy/k8s/deploy.sh",
         "deploy-local": "../deploy/k8s/deploy-local.sh",
