ROX-2396: Make enabling tolerations for taints configurable while creating a sensor bundle, to enable/disable collectors on tainted nodes. (stackrox/rox#3567)

--- a/image/templates/kubernetes/kubectl/sensor.yaml
+++ b/image/templates/kubernetes/kubectl/sensor.yaml
@@ -233,6 +233,10 @@ spec:
         app: collector
       namespace: stackrox
     spec:
+      {{if .TolerationsEnabled}}
+      tolerations:
+      - operator: "Exists"
+      {{- end}}
       serviceAccount: collector
       containers:
       - name: collector
