ROX-3228: add e2e tests for new clusters page (stackrox/rox#3555)
## Description

Change test suite for clusters to use the new Cluster pages, 
instead of an Integrations modal page,
now that ROX_SENSOR_AUTOUPGRADE=true is the default;

## Testing Performed

Ran the whole `clusters.test.js`
<img width="1552" alt="Screen Shot 2019-09-26 at 3 48 55 PM" src="https://user-images.githubusercontent.com/715729/65720099-441c1f80-e075-11e9-8077-b3c875efe8d5.png">
suite locally, and they all pass.

Commits:
* Start e2e tests for new Clusters page

* More work on e2e tests for Clusters page

* Update e2e tests for cluster configuration

* Remove no-longer-used import in integrations.test.js

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 sensor*.zip
 tmp
 
+# needed for Cypress test mock zip file
+!sensor-kubernetes-cluster-testinstance.zip
+
 # Grafana captures
 monitoring/grafana/captures
 monitoring/grafana/rawcaptures
