ROX-3433 update storybook to new syntax (stackrox/rox#3605)
## Description

One of the maintainers of the themes add-on for Storybook responded to my request for how to use the add-on with Component Story Format.

Also, turned on showing source code examples and props tables for components (info = a Storybook core add-on)

![Screen Shot 2019-10-03 at 11 26 24 AM](https://user-images.githubusercontent.com/715729/66140873-dcb02380-e5d0-11e9-9c59-3a18b31c93f6.png)

## Testing Performed

Manual clicking through the Storybook instance

![Screen Shot 2019-10-03 at 4 04 23 PM](https://user-images.githubusercontent.com/715729/66160180-94582c00-e5f7-11e9-88af-083608527df7.png)

Commits:
* Update all existing stories to use the new Component Story Format

* Add automatic display of info (source code, props) to stories

* Add whitespace around stories

--- a/ui/package.json
+++ b/ui/package.json
@@ -109,6 +109,7 @@
     "devDependencies": {
         "@apollo/react-testing": "^3.1.0",
         "@babel/core": "^7.0.1",
+        "@storybook/addon-info": "^5.2.1",
         "@storybook/react": "^5.2.1",
         "@testing-library/jest-dom": "^4.1.0",
         "@testing-library/react": "^9.1.4",
