--- a/image/templates/kubernetes/helm/centralchart/templates/deployment.yaml
+++ b/image/templates/kubernetes/helm/centralchart/templates/deployment.yaml
@@ -124,7 +124,7 @@ spec:
           - name: CLUSTER_NAME
             value: main
           - name: PROMETHEUS_ENDPOINT
-            value: http://localhost:9090
+            value: http://127.0.0.1:9090
           - name: MONITORING_ENDPOINT
             value: {{.Values.monitoring.endpoint}}
         resources:
