Fix OpenShift by adding HostPID to SCC temporarily (stackrox/rox#3632)

--- a/image/templates/openshift/kubectl/sensor-scc.yaml
+++ b/image/templates/openshift/kubectl/sensor-scc.yaml
@@ -115,6 +115,7 @@ allowHostPID: false
 allowHostPorts: false
 allowPrivilegeEscalation: true
 allowedCapabilities: null
+allowHostPID: true
 volumes:
   - configMap
   - downwardAPI
