--- a/ui/package.json
+++ b/ui/package.json
@@ -15,6 +15,7 @@
         "apollo-utilities": "^1.3.2",
         "axios": "^0.18.1",
         "computed-style-to-inline-style": "^3.0.0",
+        "core-js": "^3.2.1",
         "cytoscape": "^3.5.0",
         "cytoscape-cose-bilkent": "^4.0.0",
         "cytoscape-node-html-label": "^1.1.3",
@@ -68,7 +69,7 @@
         "react-truncate": "^2.4.0",
         "react-vis": "^1.11.5",
         "recharts": "^1.3.1",
-        "redoc": "^2.0.0-alpha.40",
+        "redoc": "^2.0.0-rc.16",
         "redux": "^4.0.1",
         "redux-form": "^7.4.2",
         "redux-saga": "^0.16.0",
@@ -76,7 +77,7 @@
         "shave": "^2.5.3",
         "slick-carousel": "^1.8.1",
         "store": "^2.0.12",
-        "styled-components": "^3.4.10",
+        "styled-components": "^4.4.0",
         "tippy.js": "^4.3.2",
         "typeface-open-sans": "^0.0.54",
         "typeface-open-sans-condensed": "^0.0.72",
