--- a/ui/package.json
+++ b/ui/package.json
@@ -55,6 +55,7 @@
         "react-popper": "0.9.0",
         "react-pose": "^4.0.8",
         "react-redux": "^5.0.7",
+        "react-responsive": "^8.0.1",
         "react-router-dom": "^4.3.1",
         "react-router-prop-types": "^1.0.4",
         "react-router-redux": "^5.0.0-alpha.9",
